feat(new feature): j9 - immutable collections factories